# cmglib

./: .gitignore  README.md  pyproject.toml
cmglib/: builder.py  parser.py  read_dat.py  report.py  results.py  util.py
notebook/: classifier.ipynb  read_cmg_files.ipynb
notebook/Arquivos/: Coord_Ex.inc  Fluxo_COORD.inc  Fluxo_PERMI.inc  Fluxo_POR.inc  Fluxo_ZCORN.inc  Petrel_POR.GRDECL  TemplateReport_All_Producers.tpl  Zcorn_Ex.inc
tests/: test_builder.py  test_read_dat.py  test_report.py  test_results.py
