[tool.poetry]
name = "cmglib"
version = "0.1.0"
description = ""
authors = ["HYGOR VINICIUS COSTA SILVA <hygorvcosta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
pandas = "^2.0.3"
numpy = "^1.25.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
