[tool.poetry]
name = "cmglib"
version = "0.1.0"
description = ""
authors = ["HYGOR VINICIUS COSTA SILVA <hygorvcosta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
pandas = "^2.0.3"
numpy = "^1.25.1"
tqdm = "^4.65.0"
xarray = "^2023.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"
notebook = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
